--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -628,37 +628,37 @@
 
         <div class="history-list">
           <a href="http://odessajs.org/2013/index.html" class="history-item" target="_blank">
-            <img src="public/img/history/2013.jpg" alt="OdessaJS'2013">
+            <img src="#" data-src="public/img/history/2013.jpg" alt="OdessaJS'2013">
             <div class="history-item-title">
               OdessaJS'2013
             </div>
           </a>
           <a href="http://odessajs.org/2014/index.html" class="history-item" target="_blank">
-            <img src="public/img/history/2014.jpg" alt="OdessaJS'2014">
+            <img src="#" data-src="public/img/history/2014.jpg" alt="OdessaJS'2014">
             <div class="history-item-title">
               OdessaJS'2014
             </div>
           </a>
           <a href="http://odessajs.org/2015/index.html" class="history-item" target="_blank">
-            <img src="public/img/history/2015.jpg" alt="OdessaJS'2015">
+            <img src="#" data-src="public/img/history/2015.jpg" alt="OdessaJS'2015">
             <div class="history-item-title">
               OdessaJS'2015
             </div>
           </a>
           <a href="http://odessajs.org/2016/index.html" class="history-item" target="_blank">
-            <img src="public/img/history/2016.jpg" alt="OdessaJS'2016">
+            <img src="#" data-src="public/img/history/2016.jpg" alt="OdessaJS'2016">
             <div class="history-item-title">
               OdessaJS'2016
             </div>
           </a>
           <a href="http://odessajs.org/2017/index.html" class="history-item" target="_blank">
-            <img src="public/img/history/2017.jpg" alt="OdessaJS'2017">
+            <img src="#" data-src="public/img/history/2017.jpg" alt="OdessaJS'2017">
             <div class="history-item-title">
               OdessaJS'2017
             </div>
           </a>
           <a href="http://odessajs.org/" class="history-item" target="_blank">
-            <img src="public/img/history/2018.jpg" alt="OdessaJS'2018">
+            <img src="#" data-src="public/img/history/2018.jpg" alt="OdessaJS'2018">
             <div class="history-item-title">
               OdessaJS'2018
             </div>
