--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -171,59 +171,67 @@
   </header>
   <div class="wrapper">
     <section id="heading" class="heading p-b-80">
-      <div class="container">
+      <!--<div class="container">-->
 
-        <div class="heading-title-row flex j-c-space-between m-t-20 ">
+        <!--<div class="heading-title-row flex j-c-space-between m-t-20 ">-->
 
-          <div class="heading-logo m-t-30">
-            <img src="public/img/logo.png?v1.01" alt="OdessaPy Conference" itemprop="image">
-            <!--<img src="public/img/logo_py_1.svg" alt="OdessaPy Conference" itemprop="image">-->
+          <!--<div class="heading-logo m-t-30">-->
+            <!--<img src="public/img/logo.png?v1.01" alt="OdessaPy Conference" itemprop="image">-->
+            <!--&lt;!&ndash;<img src="public/img/logo_py_1.svg" alt="OdessaPy Conference" itemprop="image">&ndash;&gt;-->
 
-            <div class="text-center heading-tickets-btn m-t-40 m-b-30">
-              <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank"
-                 class="btn btn-light-green">${{ index.menu_tickets }}$</a>
-            </div>
+            <!--<div class="text-center heading-tickets-btn m-t-40 m-b-30">-->
+              <!--<a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank"-->
+                 <!--class="btn btn-light-green">${{ index.menu_tickets }}$</a>-->
+            <!--</div>-->
 
-            <div class="m-t-10 text-center volunteer-header">
-              <a href="https://goo.gl/forms/sJA5sZwPSyenM4uH2" class="btn">
-                ${{ index.volunteer }}$
-              </a>
-            </div>
+            <!--<div class="m-t-10 text-center volunteer-header">-->
+              <!--<a href="https://goo.gl/forms/sJA5sZwPSyenM4uH2" class="btn">-->
+                <!--${{ index.volunteer }}$-->
+              <!--</a>-->
+            <!--</div>-->
 
-          </div>
+          <!--</div>-->
 
-          <div class="heading-sun m-l-30">
-            <img src="https://via.placeholder.com/1x1" data-src="public/img/heading_sun.svg" alt="">
-          </div>
+          <!--<div class="heading-sun m-l-30">-->
+            <!--<img src="https://via.placeholder.com/1x1" data-src="public/img/heading_sun.svg" alt="">-->
+          <!--</div>-->
 
 
-        </div>
+        <!--</div>-->
 
-        <div class="flex f-d-column a-i-flex-end j-c-flex-end heading-list-container">
+        <!--<div class="flex f-d-column a-i-flex-end j-c-flex-end heading-list-container">-->
 
-          <div class="heading-date" itemprop="startDate" content="2018-09-30">
-            ${{ index.heading_date }}$
-          </div>
+          <!--<div class="heading-date" itemprop="startDate" content="2018-09-30">-->
+            <!--${{ index.heading_date }}$-->
+          <!--</div>-->
 
-          <ul class="heading-list">
-            <li class="calendar">${{ index.heading_list_1 }}$</li>
-            <li class="clock">${{ index.heading_list_2 }}$</li>
-            <li class="format">${{ index.heading_list_4 }}$</li>
-            <li class="sheet">
-              ${{ index.heading_list_3 }}$ <br>
-              <br>
-              - ${{ index.heading_list_3_1 }}$ <br>
-              - ${{ index.heading_list_3_2 }}$ <br>
-              - ${{ index.heading_list_3_3 }}$ <br>
-            </li>
-          </ul>
-        </div>
-      </div>
+          <!--<ul class="heading-list">-->
+            <!--<li class="calendar">${{ index.heading_list_1 }}$</li>-->
+            <!--<li class="clock">${{ index.heading_list_2 }}$</li>-->
+            <!--<li class="format">${{ index.heading_list_4 }}$</li>-->
+            <!--<li class="sheet">-->
+              <!--${{ index.heading_list_3 }}$ <br>-->
+              <!--<br>-->
+              <!-- - ${{ index.heading_list_3_1 }}$ <br>-->
+              <!-- - ${{ index.heading_list_3_2 }}$ <br>-->
+              <!-- - ${{ index.heading_list_3_3 }}$ <br>-->
+            <!--</li>-->
+          <!--</ul>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="user-select-none">-->
+        <!--<img class="heading-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/heading_bg.png"-->
+             <!--alt="lighthouse">-->
+        <!--<img class="heading-bg-img-m" src="https://via.placeholder.com/1x1" data-src="public/img/heading_bg_m.png"-->
+             <!--alt="lighthouse">-->
+      <!--</div>-->
+
       <div class="user-select-none">
-        <img class="heading-bg-img" src="https://via.placeholder.com/1x1" data-src="public/img/heading_bg.png"
-             alt="lighthouse">
-        <img class="heading-bg-img-m" src="https://via.placeholder.com/1x1" data-src="public/img/heading_bg_m.png"
-             alt="lighthouse">
+        <picture>
+          <source media="(max-width: 992px)" srcset="public/img/collage_mob.jpg">
+          <source media="(min-width: 993px)" srcset="public/img/collage_desk.jpg">
+          <img src="https://via.placeholder.com/1x1" class="heading-bg-img collage" alt="Speakers" data-src="public/img/collage_desk.jpg">
+        </picture>
       </div>
     </section>
 
