shedule update and beetroot sponsor update

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -431,8 +431,8 @@
           <div id="schedule-list" class="schedule-list">
             <div class="schedule-head">
               <div class="schedule-head-item"></div>
-              <div class="schedule-head-item">Stage A</div>
-              <!--<div class="schedule-head-item">Stage B</div>-->
+              <div class="schedule-head-item">Stage A (Talk)</div>
+              <div class="schedule-head-item">Stage B (Tech Corner)</div>
             </div>
 
             <div class="schedule-body">
@@ -489,16 +489,25 @@
         <div class="m-t-80">
           <h3 class="text-center m-b-30">${{ index.sponsors_head }}$</h3>
         </div>
-
-        <!-- Silver sponsors-->
+        
+        <!-- Golden sponsors-->
         <div class="m-t-30">
-          <h4 class="sponsors-type text-center m-b-10">${{ index.sponsors_silver }}$</h4>
+          <h4 class="sponsors-type text-center m-b-10">${{ index.sponsors_golden }}$</h4>
 
           <div class="sponsors-media-list">
             <a href="https://beetroot.se/" class="sponsors-media-item" target="_blank">
               <img src="public/img/conference_partners/Beetroot.png" alt="Beetroot">
             </a>
 
+          </div>
+        </div>
+        <!-- Golden sponsors-->
+
+        <!-- Silver sponsors-->
+        <div class="m-t-30">
+          <h4 class="sponsors-type text-center m-b-10">${{ index.sponsors_silver }}$</h4>
+
+          <div class="sponsors-media-list">
             <a href="http://competera.net/" class="sponsors-media-item" target="_blank">
               <img src="public/img/conference_partners/competera.png" alt="Competera">
             </a>
