studen ticket added, text fixes

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -282,6 +282,20 @@
                     1500 <span itemprop="priceCurrency" content="UAH">UAH</span>
                   </div>
                 </li>
+                <li class="about-ticket-item" itemprop="price" content="discount 50%">
+                  <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
+                    <div class="about-ticket-title">
+                      Student <br>
+                      Ticket
+                    </div>
+                  </a>
+                  <div class="about-ticket-desc">
+                    discount 50%
+                  </div>
+                  <div class="about-ticket-desc about-ticket-desc-sub">
+                    * Ask for promocode
+                  </div>
+                </li>
               </ul>
 
               <ul class="about-advantages">
