--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -648,6 +648,15 @@
           ${{ index.location_heading }}$
         </div>
 
+        <div class="location-img-container m-t-30">
+          <div class="location-img-container_item">
+            <img src="public/img/location/location_1.jpg" alt="location_photo_1">
+          </div>
+          <div class="location-img-container_item">
+            <img src="public/img/location/location_2.jpg" alt="location_photo_2">
+          </div>
+        </div>
+
         <h3 class="text-center m-b-30">${{ index.location_address }}$</h3>
 
       </div>
