late chance ticket added

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -285,6 +285,16 @@
                     1500 <span itemprop="priceCurrency" content="UAH">UAH</span>
                   </div>
                 </li>
+                
+                <li class="about-ticket-item" itemprop="price" content="1750.00">
+                  <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
+                    <div class="about-ticket-title">
+                      Late Chance <br>
+                      Ticket
+                    </div>
+                  </a>
+                </li>
+                
                 <li class="about-ticket-item" itemprop="price" content="discount 50%">
                   <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
                     <div class="about-ticket-title">
