--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -286,23 +286,26 @@
                   </div>
                 </li>
                 
-                <li class="about-ticket-item" itemprop="price" content="1750.00">
+                <li class="about-ticket-item" itemprop="price" content="1700.00">
                   <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
                     <div class="about-ticket-title">
                       Late Chance <br>
                       Ticket
                     </div>
                   </a>
+                  <div class="about-ticket-desc">
+                    1700 <span itemprop="priceCurrency" content="UAH">UAH</span>
+                  </div>
                 </li>
                 
-                <li class="about-ticket-item" itemprop="price" content="discount 50%">
+                <li class="about-ticket-item" itemprop="price" content="850">
                   <a href="https://pycon-odessa.ticketforevent.com/?draft_mode=on" target="_blank" itemprop="url">
                     <div class="about-ticket-title">
                       Student <br>
                       Ticket
                     </div>
                   </a>
-                  <div class="about-ticket-desc">
+                  <div class="about-ticket-desc" itemprop="priceCurrency" content="UAH">
                     discount 50%
                   </div>
                   <div class="about-ticket-desc about-ticket-desc-sub">
