shedule subtitles added

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -460,6 +460,9 @@
           ${{ index.speakers_preparty_head }}$
         </h3>
 
+       	<div class="h3 m-t-40 text-center">
+       		${{ index.speakers_preparty_subtitle }}$
+       	</div>
         <div class="schedule-list-container">
           <div id="preparty-schedule-list" class="schedule-list">
             <!--<div class="schedule-head">-->
@@ -475,6 +478,9 @@
 
         <div class="schedule-list-container">
           <div id="main-schedule-list" class="schedule-list">
+           	<div class="h3 m-t-40 text-center">
+       			${{ index.shedule_description }}$
+       		</div>
             <div class="schedule-head">
               <div class="schedule-head-item"></div>
               <div class="schedule-head-item">Stage A [Talk]</div>
