youtube button added to menu

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -126,6 +126,14 @@
                 <a href="https://t.me/OdessaPYConference" target="_blank" title="telegram">
                   <i class="fa fa-paper-plane" aria-hidden="true"></i>
                 </a>
+                <a href="https://www.youtube.com/channel/UCQIwl_GFUQREIxM-c02qnHw" target="_blank" title="youtube">
+                  <i class="fa fa-youtube" aria-hidden="true"></i>
+                </a>
+<!--
+                 <a href="https://www.slideshare.net/OdessaPyConference/presentations" target="_blank" title="slideshare">
+                  SlideShare
+                </a>
+-->
               </div>
             </li>
 
@@ -162,6 +170,15 @@
           <a href="https://t.me/OdessaPYConference" target="_blank" title="telegram">
             <i class="fa fa-paper-plane" aria-hidden="true"></i>
           </a>
+          <!--TODO: youtube link-->
+          <a href="https://www.youtube.com/channel/UCQIwl_GFUQREIxM-c02qnHw" target="_blank" title="youtube">
+            <i class="fa fa-youtube" aria-hidden="true"></i>
+          </a>
+<!--
+          <a href="https://www.slideshare.net/OdessaPyConference/presentations" target="_blank" title="slideshare">
+            SlideShare
+          </a>
+-->
         </div>
         <div class="brgr-menu"></div>
       </div>
