--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -274,16 +274,21 @@
                   <div class="h5 text-center m-t-5">Conference Pre-party 
 “Soft Skills Development”(Photo)</div>
               </a>
-              <a class="box" href="https://www.facebook.com/NodeUkraine/videos/2289179934644813/" >
-                  <img src="https://via.placeholder.com/1x1" data-src="public/img/head/preparty_video_preview_bw.jpeg" alt="preparty photo preview">
+              <a class="box" href="https://www.youtube.com/playlist?list=PLpIsQPwLKqN9dDRiS14-xgYAcgXG8YvLx" >
+                  <img src="https://via.placeholder.com/1x1" data-src="public/img/head/preparty_video_preview_bw.jpeg" alt="preparty video preview">
                   <div class="h5 text-center m-t-5">Conference Pre-party 
 “Soft Skills Development”(Video)</div>
               </a>
               <a class="box" href="https://www.facebook.com/pg/OdessaPYConference/photos/?tab=album&album_id=1101626603332947" >
-                  <img src="https://via.placeholder.com/1x1" data-src="public/img/head/event_preview_bw.jpeg" alt="preparty photo preview">
+                  <img src="https://via.placeholder.com/1x1" data-src="public/img/head/event_preview_bw.jpeg" alt="main event photo preview">
                   <div class="h5 text-center m-t-5">OdessaPY Conference 
-Photo Album</div>
+Photo Album(Part 1)</div>
               </a>
+              <a class="box" href="https://www.facebook.com/pg/OdessaPYConference/photos/?tab=album&album_id=1124996717662602" >
+                <img src="https://via.placeholder.com/1x1" data-src="public/img/head/preparty_part2.jpeg" alt="main event photo preview">
+                <div class="h5 text-center m-t-5">OdessaPY Conference 
+Photo Album(Part 2)</div>
+            </a>
           </div>
           
           <div class="video-container">
